# class-230605

./: .gitignore  CMakeLists.txt  Dockerfile  NextDate.cpp  NextDate.h  shownext.cpp  tests.cpp
.github/workflows/: docker.yml
